// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfileForm render function It adds validation error for age 1`] = `
<UserProfileForm>
  <form
    className="profile-form needs-validation"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  >
    <div
      className="input-group mb2   has-feedback"
    >
      <input
        className="form-control mb3   has-feedback"
        data-cy="user-form-name"
        name="name"
        onChange={[Function]}
        placeholder="Vælg brugernavn"
        type="text"
        value=""
      />
      <span
        aria-hidden="true"
        className="form-control-feedback "
      >
        <i
          className="material-icons"
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
           
        </i>
      </span>
    </div>
    <p
      className="mb6"
    >
      <T
        component="login"
        name="signedInby"
      >
        Du er logget på via
      </T>
       
    </p>
    <label
      className="checkbox"
      data-cy="user-form-acceptedTerms"
      htmlFor="acceptedTerms"
    >
      <input
        checked={false}
        className="checkbox"
        id="acceptedTerms"
        name="acceptedTerms"
        onChange={[Function]}
        type="checkbox"
      />
      <span />
      <T
        component="profile"
        name="termsCheckboxText"
      >
        Jeg har læst og accepteret
      </T>
       
      <a
        href="#terms"
      >
        <T
          component="profile"
          name="termsCheckboxLink"
        >
          reglerne for anvendelse af Læsekompasset
        </T>
      </a>
    </label>
    <div
      className="error mb2"
    >
      <T
        component="profile"
        name="validationUsernameLength"
      >
        Dit brugernavn skal være minimum 4 karakterer langt
      </T>
    </div>
    <button
      className="btn btn-success btn-block"
      data-cy="user-form-submit"
    >
      <T
        component="profile"
        name="editProfile"
      >
        Redigér profil
      </T>
    </button>
  </form>
</UserProfileForm>
`;

exports[`UserProfileForm render function It adds validation error for age 2`] = `
<UserProfileForm
  acceptedAge={true}
>
  <form
    className="profile-form needs-validation"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  >
    <div
      className="input-group mb2   has-feedback"
    >
      <input
        className="form-control mb3   has-feedback"
        data-cy="user-form-name"
        name="name"
        onChange={[Function]}
        placeholder="Vælg brugernavn"
        type="text"
        value=""
      />
      <span
        aria-hidden="true"
        className="form-control-feedback "
      >
        <i
          className="material-icons"
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
           
        </i>
      </span>
    </div>
    <p
      className="mb6"
    >
      <T
        component="login"
        name="signedInby"
      >
        Du er logget på via
      </T>
       
    </p>
    <label
      className="checkbox"
      data-cy="user-form-acceptedTerms"
      htmlFor="acceptedTerms"
    >
      <input
        checked={false}
        className="checkbox"
        id="acceptedTerms"
        name="acceptedTerms"
        onChange={[Function]}
        type="checkbox"
      />
      <span />
      <T
        component="profile"
        name="termsCheckboxText"
      >
        Jeg har læst og accepteret
      </T>
       
      <a
        href="#terms"
      >
        <T
          component="profile"
          name="termsCheckboxLink"
        >
          reglerne for anvendelse af Læsekompasset
        </T>
      </a>
    </label>
    <div
      className="error mb2"
    >
      <T
        component="profile"
        name="validationUsernameLength"
      >
        Dit brugernavn skal være minimum 4 karakterer langt
      </T>
    </div>
    <button
      className="btn btn-success btn-block"
      data-cy="user-form-submit"
    >
      <T
        component="profile"
        name="editProfile"
      >
        Redigér profil
      </T>
    </button>
  </form>
</UserProfileForm>
`;

exports[`UserProfileForm render function It adds validation error for terms 1`] = `
<UserProfileForm>
  <form
    className="profile-form needs-validation"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  >
    <div
      className="input-group mb2   has-feedback"
    >
      <input
        className="form-control mb3   has-feedback"
        data-cy="user-form-name"
        name="name"
        onChange={[Function]}
        placeholder="Vælg brugernavn"
        type="text"
        value=""
      />
      <span
        aria-hidden="true"
        className="form-control-feedback "
      >
        <i
          className="material-icons"
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
           
        </i>
      </span>
    </div>
    <p
      className="mb6"
    >
      <T
        component="login"
        name="signedInby"
      >
        Du er logget på via
      </T>
       
    </p>
    <label
      className="checkbox"
      data-cy="user-form-acceptedTerms"
      htmlFor="acceptedTerms"
    >
      <input
        checked={false}
        className="checkbox"
        id="acceptedTerms"
        name="acceptedTerms"
        onChange={[Function]}
        type="checkbox"
      />
      <span />
      <T
        component="profile"
        name="termsCheckboxText"
      >
        Jeg har læst og accepteret
      </T>
       
      <a
        href="#terms"
      >
        <T
          component="profile"
          name="termsCheckboxLink"
        >
          reglerne for anvendelse af Læsekompasset
        </T>
      </a>
    </label>
    <div
      className="error mb2"
    >
      <T
        component="profile"
        name="validationUsernameLength"
      >
        Dit brugernavn skal være minimum 4 karakterer langt
      </T>
    </div>
    <button
      className="btn btn-success btn-block"
      data-cy="user-form-submit"
    >
      <T
        component="profile"
        name="editProfile"
      >
        Redigér profil
      </T>
    </button>
  </form>
</UserProfileForm>
`;

exports[`UserProfileForm render function It adds validation error for terms 2`] = `
<UserProfileForm
  acceptedTerms={true}
>
  <form
    className="profile-form needs-validation"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  >
    <div
      className="input-group mb2   has-feedback"
    >
      <input
        className="form-control mb3   has-feedback"
        data-cy="user-form-name"
        name="name"
        onChange={[Function]}
        placeholder="Vælg brugernavn"
        type="text"
        value=""
      />
      <span
        aria-hidden="true"
        className="form-control-feedback "
      >
        <i
          className="material-icons"
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
           
        </i>
      </span>
    </div>
    <p
      className="mb6"
    >
      <T
        component="login"
        name="signedInby"
      >
        Du er logget på via
      </T>
       
    </p>
    <div
      className="error mb2"
    >
      <T
        component="profile"
        name="validationUsernameLength"
      >
        Dit brugernavn skal være minimum 4 karakterer langt
      </T>
    </div>
    <button
      className="btn btn-success btn-block"
      data-cy="user-form-submit"
    >
      <T
        component="profile"
        name="editProfile"
      >
        Redigér profil
      </T>
    </button>
  </form>
</UserProfileForm>
`;

exports[`UserProfileForm render function renders an user profile form 1`] = `
<form
  className="profile-form needs-validation"
  onSubmit={[Function]}
  style={
    Object {
      "maxWidth": "400px",
    }
  }
>
  <div
    className="input-group mb2   has-feedback"
  >
    <input
      className="form-control mb3   has-feedback"
      data-cy="user-form-name"
      name="name"
      onChange={[Function]}
      placeholder="Vælg brugernavn"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      className="form-control-feedback "
    >
      <i
        className="material-icons"
        style={
          Object {
            "fontSize": 18,
          }
        }
      >
         
      </i>
    </span>
  </div>
  <p
    className="mb6"
  >
    Du er logget på via
     
  </p>
  <label
    className="checkbox"
    data-cy="user-form-acceptedTerms"
    htmlFor="acceptedTerms"
  >
    <input
      checked={false}
      className="checkbox"
      disabled={undefined}
      id="acceptedTerms"
      name="acceptedTerms"
      onChange={[Function]}
      type="checkbox"
    />
    <span />
    Jeg har læst og accepteret
     
    <a
      href="#terms"
    >
      reglerne for anvendelse af Læsekompasset
    </a>
  </label>
  <button
    className="btn btn-success btn-block"
    data-cy="user-form-submit"
    disabled={undefined}
  >
    Redigér profil
  </button>
</form>
`;
